--- a/app/src/main/res/layout/activity_infor_date_td.xml
+++ b/app/src/main/res/layout/activity_infor_date_td.xml
@@ -12,37 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_below="@id/txtNum"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llButton"
-        android:weightSum="4">
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fragment One"
-            android:onClick="FragmentOneClick"
-            android:layout_weight="2"/>
+        android:layout_height="fill_parent">
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fragment Two"
-            android:onClick="FragmentTwoClick"
-            android:layout_weight="2"/>
-    </LinearLayout>
-
-    <fragment
-        android:id="@+id/fragment_switch"
-        android:name="com.example.trinhcanhphuc.viewxskt.FragmentOne"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"/>
-
+    </FrameLayout>
 </LinearLayout>
