--- a/app/src/main/res/layout/fragment_list_num_tt.xml
+++ b/app/src/main/res/layout/fragment_list_num_tt.xml
@@ -1,8 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.trinhcanhphuc.viewxskt.ListNumTTFragment">
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -12,10 +11,10 @@
         android:text="@string/hello_blank_fragment" />
 
     <ListView
-        android:layout_marginTop="20dp"
+        android:id="@+id/lvNumTT"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvNumTT">
+        android:layout_marginTop="20dp">
     </ListView>
 
-</FrameLayout>
+</LinearLayout>
