--- a/app/src/main/res/layout/activity_infor_date_td.xml
+++ b/app/src/main/res/layout/activity_infor_date_td.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:id="@+id/lvDays"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
+
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="fill_parent"
